adding first page, and creating sidebar

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-highlight": "^0.10.0",
+    "react-markdown": "^2.5.0",
     "sass-loader": "^6.0.6",
     "susy": "^3.0.1"
   },
