switching to gatsby

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,14 @@
     "import/no-unresolved": 0,
     "react/jsx-filename-extension": 0,
     "linebreak-style": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "react/prop-types": [
+      "error",
+      {
+        "ignore": [
+          "children"
+        ]
+      }
+    ]
   }
 }
