--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "playground",
+  "name": "mozilla-playground",
+  "description": "Learn about CSS Grid Layout",
   "version": "1.0.0",
-  "description": "Learn about CSS Grid Layouts and the Firefox CSS Grid Layout Panel",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev",
-    "build": "next build && next export -o dist",
-    "start": "next start",
-    "deploy": "npm run build && touch dist/.nojekyll && gh-pages -d dist --dotfiles",
-    "meh": "gh-pages --help"
-  },
-  "author": "Dan Brown",
-  "license": "ISC",
+  "author": "Dan Brown <dbrown@mozilla.com>",
   "dependencies": {
-    "autoprefixer": "7.1.4",
+    "autoprefixer": "^7.1.4",
     "babel-eslint": "^8.0.0",
     "babel-plugin-module-resolver": "2.7.1",
     "babel-plugin-wrap-in-js": "^1.1.0",
@@ -24,24 +14,29 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "gatsby": "^1.9.36",
+    "gatsby-link": "^1.6.15",
+    "gatsby-plugin-postcss-sass": "^1.0.12",
+    "gatsby-plugin-react-helmet": "^1.0.5",
     "gh-pages": "^1.0.0",
-    "glob": "7.1.2",
     "mappy-breakpoints": "^0.2.3",
-    "next": "^3.2.2",
-    "node-sass": "^4.4.0",
-    "normalize.css": "7.0.0",
-    "postcss-easy-import": "3.0.0",
-    "postcss-loader": "2.0.6",
     "prop-types": "^15.5.10",
-    "raw-loader": "^0.5.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-highlight": "^0.10.0",
-    "react-markdown": "^2.5.0",
-    "sass-loader": "^6.0.6",
-    "susy": "^3.0.1"
+    "susy": "^3.0.1",
+    "typeface-antonio": "^1.0.0"
+  },
+  "keywords": [
+    "mozilla"
+  ],
+  "license": "MIT",
+  "main": "n/a",
+  "scripts": {
+    "build": "gatsby build",
+    "dev": "gatsby develop",
+    "format": "prettier-eslint \"src/**/*.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "now": "^8.3.0"
+    "prettier": "^1.6.1",
+    "prettier-eslint-cli": "^4.3.2"
   }
 }
