--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.0",
-    "gatsby": "^1.9.169",
-    "gatsby-link": "^1.6.34",
-    "gatsby-plugin-google-analytics": "^1.0.16",
-    "gatsby-plugin-postcss-sass": "^1.0.16",
-    "gatsby-plugin-react-helmet": "^2.0.4",
+    "gatsby": "next",
+    "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "next",
     "gh-pages": "^1.1.0",
     "mappy-breakpoints": "^0.2.3",
     "prop-types": "^15.6.0",
+    "react": "^16.4.2",
     "react-bodymovin": "^1.1.1",
+    "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-modal-video": "^1.0.7",
     "susy": "^3.0.2",
